# MiniNav

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml  feature.yml  tech-debt.yml
.github/workflows/: ci.yml
cmake/: cli11.cmake  google_test.cmake  rerun.cmake  spdlog.cmake  warnings.cmake  yaml_cpp.cmake
docs/: project-management.md  project-overview.md  project_management.md  project_overview.md  v0.md  v0_summary.md  v1_summary.md  v2_roadmap.md  v2_summary.md
docs/experiments/: v2_ekf_fusion.md
docs/math/: EKF_Foundations.md  odom_noise.md  runge_kutta_integration.md
maps/: corridor.pgm  corridor.yaml  maze.pgm  maze.yaml  room.pgm  room.yaml
scripts/: analyze_v1_drift.py  analyze_v2_ekf.py  analyze_v2_integrator.py  plot_trajectory.py  sweep_v2_integrator.py
scripts/v1/: analyze_drift.py
scripts/v2/: analyze_covariance.py  analyze_ekf.py  analyze_integrator.py  sweep_integrator.py
src/apps/: sim_main.cpp  sim_v0_main.cpp  sim_v1_main.cpp  sim_v2_main.cpp
src/core/: CMakeLists.txt  command_source.ixx  csv_format.cpp  csv_format.ixx  csv_writer.cpp  csv_writer.ixx  integrators.cpp  integrators.ixx  kinematics.cpp  kinematics.ixx  logger.cpp  logger.ixx  math.ixx  random.ixx  robot_model.cpp  robot_model.ixx  staged_command_source.cpp  trajectory.ixx  types.cpp  types.ixx
src/localization/: CMakeLists.txt  ekf.cpp  ekf.ixx  ekf_state.ixx  encoder_observation.cpp  encoder_observation.ixx  wheel_odometry.cpp  wheel_odometry.ixx
src/planning/: CMakeLists.txt  astar.cpp  astar.ixx  grid_types.cpp  grid_types.ixx  inflation.cpp  inflation.ixx  map_io.cpp  map_io.ixx  occupancy_grid.cpp  occupancy_grid.ixx  planner_config.cpp  planner_config.ixx
src/sensors/: CMakeLists.txt  actuator_model.cpp  actuator_model.ixx  imu_model.cpp  imu_model.ixx  wheel_encoder.cpp  wheel_encoder.ixx
src/viz/: CMakeLists.txt  rerun_sink.cpp  rerun_sink.ixx  sim_state_log.cpp  sim_state_log.ixx  viz_sink.cpp  viz_sink.ixx
tests/: CMakeLists.txt  robot_model_tests.cpp
tests/core/: kinematics_tests.cpp  math_tests.cpp  random_tests.cpp  robot_model_tests.cpp  trajectory_tests.cpp  types_tests.cpp
tests/localization/: ekf_bias_observability_tests.cpp  ekf_encoder_update_tests.cpp  ekf_fusion_rmse_tests.cpp  ekf_imu_update_tests.cpp  ekf_integrator_consistency_tests.cpp  ekf_jacobian_finite_diff_tests.cpp  ekf_nis_tests.cpp  ekf_predict_tests.cpp  encoder_observation_tests.cpp  wheel_odometry_tests.cpp
tests/planning/: astar_tests.cpp  grid_types_tests.cpp  inflation_tests.cpp  map_io_tests.cpp  occupancy_grid_tests.cpp  planner_config_tests.cpp
tests/sensors/: actuator_model_tests.cpp  imu_model_tests.cpp  wheel_encoder_tests.cpp
tests/viz/: viz_sink_log_tests.cpp
